update gitignore to avoid load json file

--- a/ann_model/.gitignore
+++ b/ann_model/.gitignore
@@ -6,6 +6,7 @@
 ################################
 ########### FOLDERS ############
 ################################
+dataset/
 build/
 html/
 .benchmarks/
