--- a/ann_model/.gitignore
+++ b/ann_model/.gitignore
@@ -2,7 +2,7 @@
 ###########  FILES  ############
 ################################
 *.exe
-
+*.json
 ################################
 ########### FOLDERS ############
 ################################
